--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,16 @@
 body {
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: beige;
 }
 
 .title{
     font-weight: 900;
     font-size: 2.8em;
+}
+
+li.alert.alert-danger {
+    padding: 1rem 1.5rem; 
+}
+
+th.fw-bold{
+    font-size: large;
 }
