Se agrega el Mostrar y ajuste de estilos

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,3 +14,8 @@ li.alert.alert-danger {
 th.fw-bold{
     font-size: large;
 }
+
+footer{
+    background-color: #212529;
+    font-style: italic;
+}
